# val

./: CMakeLists.txt  LICENSE  README.md
include/: val.hpp
test/: CMakeLists.txt  val.test.cpp
